src-tauri/tests/snapshots/streaming_send_params__params_with_linked_dirs.snap
---
source: tests/streaming_send_params.rs
assertion_line: 126
expression: "&params"
---
additionalDirectories:
  - /abs/claw-code
  - /abs/rust
cwd: /abs/workspace
effortLevel: high
fastMode: false
model: claude-opus-4
permissionMode: bypassPermissions
prompt: hello
provider: claude
resume: ~
sessionId: sidecar-sess-1
